[gd_scene load_steps=13 format=2]

[ext_resource path="res://StoryManager.gd" type="Script" id=1]
[ext_resource path="res://godot-ink/addons/paulloz.ink/Story.cs" type="Script" id=2]
[ext_resource path="res://media/portrait/francis.png" type="Texture" id=3]
[ext_resource path="res://media/portrait/note.png" type="Texture" id=4]
[ext_resource path="res://media/portrait/shadow.png" type="Texture" id=5]
[ext_resource path="res://media/portrait/telegraph.png" type="Texture" id=6]
[ext_resource path="res://fonts/Cavalcade/Cavalcade-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="ButtonGroup" id=5]

[node name="Main" type="Node2D"]

[node name="StoryManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Story" type="Node" parent="StoryManager"]
script = ExtResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="StoryManager"]

[node name="Background" type="TextureRect" parent="StoryManager"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
texture = SubResource( 4 )
stretch_mode = 7

[node name="Portraits" type="Node2D" parent="StoryManager"]

[node name="francis" type="TextureRect" parent="StoryManager/Portraits"]
visible = false
margin_left = 31.2857
margin_top = -10.1257
margin_right = 671.286
margin_bottom = 709.874
texture = ExtResource( 3 )

[node name="note" type="TextureRect" parent="StoryManager/Portraits"]
visible = false
margin_left = 31.2857
margin_top = -10.1257
margin_right = 671.286
margin_bottom = 709.874
texture = ExtResource( 4 )

[node name="shadow" type="TextureRect" parent="StoryManager/Portraits"]
visible = false
margin_left = 31.2857
margin_top = -10.1257
margin_right = 671.286
margin_bottom = 709.874
texture = ExtResource( 5 )

[node name="telegraph" type="TextureRect" parent="StoryManager/Portraits"]
visible = false
margin_left = 31.2857
margin_top = -10.1257
margin_right = 671.286
margin_bottom = 709.874
texture = ExtResource( 6 )

[node name="SpeechBubble" type="Node2D" parent="StoryManager"]

[node name="ColorRect" type="ColorRect" parent="StoryManager/SpeechBubble"]
margin_left = 12.0
margin_top = 400.0
margin_right = 1259.0
margin_bottom = 709.0
color = Color( 0.203922, 0.117647, 0.0352941, 1 )

[node name="StoryText" type="RichTextLabel" parent="StoryManager/SpeechBubble/ColorRect"]
margin_left = 11.0
margin_top = 20.0
margin_right = 1228.0
margin_bottom = 191.0
custom_fonts/normal_font = SubResource( 1 )
text = "story not loaded"

[node name="ContinueButton" type="Button" parent="StoryManager/SpeechBubble/ColorRect"]
margin_left = 1085.0
margin_top = 199.0
margin_right = 1238.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 2 )
text = "next"
flat = true

[node name="ChoicesContainer" type="GridContainer" parent="StoryManager/SpeechBubble/ColorRect"]
margin_left = 25.0
margin_top = 189.0
margin_right = 1118.0
margin_bottom = 308.0
columns = 2

[node name="Choice1" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_right = 94.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true

[node name="Choice2" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true

[node name="Choice3" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_top = 41.0
margin_right = 94.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true

[node name="Choice4" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_left = 98.0
margin_top = 41.0
margin_right = 192.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true

[node name="Choice5" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_top = 82.0
margin_right = 94.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true

[node name="Choice6" type="CheckBox" parent="StoryManager/SpeechBubble/ColorRect/ChoicesContainer"]
margin_left = 98.0
margin_top = 82.0
margin_right = 192.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
group = SubResource( 5 )
text = "Choice"
flat = true
